--- a/public/tilmeld/index.html
+++ b/public/tilmeld/index.html
@@ -513,7 +513,7 @@ Det er meget vigtigt at indtaste mobilnr og e-mail adresse.</p>
 
     <p><p>Alle medlemmer, nye som gamle, som ikke har udfyldt indmeldelsesblanket sidste år, skal udfylde en indmeldelsesblanket.</p>
 
-<p>Du kan finde blanketten <a href="http://files.aalborgik1919.webnode.com/200000126-278d028870/Indmeldesesblanket%20IK%201919.docx" target="_blank">her</a></p>
+<p>Du kan finde blanketten <a href="/Indmeldesesblanket.docx">her!</a></p>
 
 <p>Som ny spiller har man 14 dages prøvetræning. Du må kun deltage i alm. træning, indtil du er indmeldt.</p>
 
